--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.3",
     "run-sequence": "^2.2.0"
