--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "william_iehl",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "browser-sync": "^2.18.13",
-    "eslint": "^4.11.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-sass": "^3.1.0"
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-scripts": "1.0.17"
   },
-  "devDependencies": {
-    "del": "^3.0.0",
-    "gulp-cache": "^1.0.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.3",
-    "run-sequence": "^2.2.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
