--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
+    "react-fa": "^5.0.0",
     "react-router-dom": "^4.2.2"
   }
 }
