--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
