--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "autho": "William Iehl",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react-fa": "^5.0.0",
     "react-router-dom": "^4.2.2"
+  },
+  "engines": {
+    "node": "9.2.1"
   }
 }
