--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "autho": "William Iehl",
   "license": "MIT",
   "devDependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
