--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react-fa": "^5.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1"
   },
   "engines": {
     "node": "9.2.1"
